[gd_scene load_steps=9 format=2]

[ext_resource path="res://Elements/Weather/Lightening/Lightning.gd" type="Script" id=1]
[ext_resource path="res://Art/Weather/Lightning.png" type="Texture" id=2]
[ext_resource path="res://Art/temp/ElectricFieldBlaster2.png" type="Texture" id=3]
[ext_resource path="res://Art/Weather/Lightning_1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 34 )

[sub_resource type="CircleShape2D" id=4]
radius = 35.0

[node name="Lightning" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "1"

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 3 )

[node name="CollisionBody" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 200, 0 )
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="CollisionBody"]
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBody"]
shape = SubResource( 4 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="ColdTimer" to="." method="_on_ColdTimer_timeout"]
